--- a/Asgmt-1/app/src/main/res/values/strings.xml
+++ b/Asgmt-1/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="btn_chat">CHAT</string>
     <string name="placeholder_groupcount">0/20</string>
     <string name="btn_language">SWEDISH</string>
+    <string name="placeholder_textchat">message</string>
 </resources>
