--- a/Asgmt-1/app/src/main/res/values/strings.xml
+++ b/Asgmt-1/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="placeholder_groupcount">0/20</string>
     <string name="btn_language">SWEDISH</string>
     <string name="placeholder_textchat">message</string>
+    <string name="desc_uploadedImage">image uploaded by user</string>
 </resources>
